<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/StartFragment">
    <fragment
        android:id="@+id/StartFragment"
        android:name="luxpm.app.myapplication.activities.fragments.StartFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_start" >

        <action
            android:id="@+id/action_StartFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_StartFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="luxpm.app.myapplication.activities.fragments.LoginFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_login" >

        <action android:id="@+id/action_loginToHomeFragment"
            app:destination="@+id/HomeFragment"/>
        <action
            android:id="@+id/action_LoginFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignUpFragment"
        android:name="luxpm.app.myapplication.activities.fragments.SignUpFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_signup" >

        <action
            android:id="@+id/action_SignUpFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="luxpm.app.myapplication.activities.fragments.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" >

    </fragment>

</navigation>